[package]
name = "d2rust"
version = "0.0.1"
authors = ["jon"]
edition = "2018"

[dependencies]
d2fileformats = { path = "d2fileformats" }
mpq = "0.7.0"
amethyst = "0.13.2" #{ git = "https://github.com/amethyst/amethyst.git" }
amethyst-imgui = "0.5.2" #{ git = "https://github.com/jaynus/amethyst-imgui" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]